# set_zulip_status

./: Cargo.toml  README.md
src/: main.rs
