[package]
name = "set_zulip_status"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "set_zulip_status"
path = "src/main.rs"

[dependencies]
eframe = "0.27"
egui = "0.27"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
dirs = "5"

[profile.release]
opt-level = 3
lto = true
strip = true
